--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -48,7 +48,7 @@ body {
     margin-bottom: 4rem;
 }
 
-.page-title .line {
+.line {
     display: flex;
     position: relative;
     left: 24px;
@@ -57,13 +57,13 @@ body {
     height: 2px;
 }
 
-.header{
+.header {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
 
-.header h1{
+.header h1 {
     display: inline;
 }
 
@@ -71,12 +71,11 @@ body {
     display: inline-block;
     font-weight: 600;
     font-size: 1rem;
-    width: 10rem;
     padding: 1rem;
     background-color: var(--accent);
     border: none;
     color: var(--bg);
-    border-radius: 1rem;
+    border-radius: 2rem;
     transition: all 0.5s ease;
     cursor: pointer;
     margin: 1rem 0.5rem;
@@ -84,7 +83,7 @@ body {
 
 .btn:hover {
     border-radius: 1rem;
-    transform: scale(1.05);
+    transform: scale(1.1);
 }
 
 .details {
@@ -94,12 +93,12 @@ body {
     height: 50vh;
 }
 
-.myblogs h1{
+.myblogs h1 {
     font-size: 40px;
     padding-bottom: 15px;
 }
 
-.aboutme h3{
+.aboutme h3 {
     font-size: 24px;
     width: 80vw;
     font-weight: 300;
@@ -113,7 +112,7 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
-.blog-wrapper:hover{
+.blog-wrapper:hover {
     background-color: #585858;
     border-radius: 2rem;
 }
@@ -221,12 +220,12 @@ body {
     border-radius: 0 20px 20px 0px;
 }
 
-.username-tag{
+.username-tag {
     color: white;
     text-decoration: none;
 }
 
-.username-tag:hover{
+.username-tag:hover {
     color: var(--accent);
 }
 
@@ -253,20 +252,15 @@ body {
         margin-bottom: 0rem;
     }
 
-    .page-title .line {
-        left: 0;
-        width: 50px;
-    }
-
     .details {
         top: 9vh;
     }
 
-    .aboutme h1{
+    .aboutme h1 {
         width: 80vw;
     }
 
-    .aboutme h3{
+    .aboutme h3 {
         font-size: 20px;
         width: 80vw;
     }
@@ -278,8 +272,8 @@ body {
     .blog-wrapper {
         flex-direction: column;
     }
-    
-    .blog-wrapper:hover{
+
+    .blog-wrapper:hover {
         background-color: transparent;
     }
 
